# lialogger

./: LICENSE  README.md  main.py  pyproject.toml
src/: config.py  entry_logger.py  entry_prompter.py  logger.py
